--- a/Android/Entrevoisins/app/src/main/AndroidManifest.xml
+++ b/Android/Entrevoisins/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.neighbour_list.DetailNeighbourActivity2"></activity>
         <activity
             android:name=".ui.neighbour_list.DetailNeighbourActivity"
             android:parentActivityName=".ui.neighbour_list.ListNeighbourActivity" />
